@@ -22,6 +22,7 @@ process TEST =
 	    { string  pathName = "HLT2"	vuint32 prescales = {  2,  5, 10 } },
 	    { string  pathName = "HLT3" vuint32 prescales = {  5, 10, 20 } },
 	    { string  pathName = "HLT4"	vuint32 prescales = { 10, 20,  0 } }
+	    #,{ string  pathName = "HLT5"	vuint32 prescales = {  1,  1,  1 } }
 	}
     }
     
